Fix/2919 [calendar] align styles with figma

--- a/packages/components/date-field/src/date-field.scss
+++ b/packages/components/date-field/src/date-field.scss
@@ -123,7 +123,7 @@ dialog {
   display: none;
   margin: var(--sl-size-100) 0 var(--sl-size-100) calc(-1 * var(--sl-size-borderWidth-default));
   opacity: 0;
-  padding: calc(var(--sl-size-050) - var(--sl-size-borderWidth-default));
+  padding: var(--sl-size-100);
   position-anchor: --field;
   position-area: bottom span-right;
   position-try-fallbacks: flip-block;
